--- a/publication_plots_9-2-23.ipynb
+++ b/publication_plots_9-2-23.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Make Potential Publication Plots for WDS-Gaia Paper"
+    "# Make Potential Publication Plots for WDS-Gaia Paper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from astropy.table import Table"
    ]
   },
   {
@@ -16,10 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "directory = '/home/sc36/dzakarian_wsl/wds_gaia_project/WDS_Gaia/'\n",
+    "wdstab = Table.read(f'{directory}wdstab6-27.ecsv', header_start=0, data_start=1) \n",
+    "\n",
+    "query_results_table = f'{directory}/stack_query_results_table_fixed4-20.ecsv'\n",
+    "index_error_queries = f'{directory}/stack_index_error_queries_fixed4-20.ecsv'\n",
+    "\n",
+    "associated_systems_table = f'{directory}/associated_systems_table_fixed4-20.ecsv'\n",
+    "non_associated_systems_table = f'{directory}/non_associated_systems_table_fixed4-20.ecsv'\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,7 +175,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -171,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.5"
   },
   "orig_nbformat": 4
  },
