fix list of included plots

--- a/publication_plots_9-2-23.ipynb
+++ b/publication_plots_9-2-23.ipynb
@@ -15,8 +15,8 @@
     "5) Delta-Mag Plot\n",
     "6) Mag-Mag Plot\n",
     "7) Color Magnitude \n",
-    "8) Delta-Mu / Delta-Mu_orbit\n",
-    "9) Proper Motion Difference Histogram"
+    "8) Delta-Mu / Delta-Mu_orbit (pm difference) Histogram\n",
+    "9) Proper Motion Plot"
    ]
   },
   {
